--- a/Design.css
+++ b/Design.css
@@ -1,43 +1,35 @@
-* {
-  margin: 0px;
-  box-sizing: border-box;
+* { margin : 0px ;
+    box-sizing: border-box;
 }
 
-div {
-  padding: 10px;
-  border: 1px solid rgb(216, 214, 81);
-}
+div { padding: 10px ; border : 1px solid rgb(216, 214, 81) ;
+ }
 
-div.column {
-  float: left;
-  height: 500px;
-}
-div.side {
-  width: 15%;
-}
-div.main {
-  width: 70%;
-}
-div.footer {
-  clear: both;
-}
+div.column { float : left; height: 500px ; }
+div.side { width : 15% ; }
+div.main { width : 70% ; }
+div.footer { clear : both ; }
 
 .h1 {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
 .h2 {
-  font-family: "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
+
 }
 
 .p1 {
-  font-family: "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
 }
 
+
 img {
-  height: 90%;
-  max-width: 50%;
+    height: 90%;
+    max-width: 50%;
+
 }
-body {
-  background-color: rgb(76, 96, 129);
+body{
+    background-color: rgb(76, 96, 129);
 }
